--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="skill">
                     <img src="habilidad1.png" alt="hab1" class="skill__image">
                     <div class="skill__info">
-                        <h3>Socializar</h3>
+                        <h3>CSS</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonummy tellus eu odio.</p>
                         <button class="btn-see-modal">VER</button>
                     </div>
