--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Perfil - Wendy Balderrama</title>
+    <title>Portafolio</title>
 </head>
 <body>
 
@@ -41,7 +41,7 @@
             <h2 class="section__title">Habilidades</h2>
             <div class="skills-row">
                 <div class="skill">
-                    <img src="habilidad1.png" alt="hab1" class="skill__image">
+                    <img src="fotos/CSS3_logo.png" alt="hab1" class="skill__image">
                     <div class="skill__info">
                         <h3>CSS</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonummy tellus eu odio.</p>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="skill">
-                    <img src="habilidad2.png" alt="HTML" class="skill__image">
+                    <img src="fotos/html logo.png" alt="HTML" class="skill__image">
                     <div class="skill__info">
                         <h3>HTML</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonummy tellus eu odio.</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="skills-row">
                 <div class="skill">
-                    <img src="habilidad3.png" alt="JavaScript" class="skill__image">
+                    <img src="fotos/js logo.png" alt="JavaScript" class="skill__image">
                     <div class="skill__info">
                         <h3>JavaScript</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonummy tellus eu odio.</p>
